# search-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: ConverterJSON.h  InvertedIndex.h  ProjectExceptions.h  SearchServer.h
json/: config.json  requests.json
src/: CMakeLists.txt  ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp  main.cpp
tests/: CMakeLists.txt  InvertedIndexTest.cpp  SearchServerTest.cpp
